<resources>
    <string name="app_name">GpsSaveData</string>

    <string name="init_gps_save">start program</string>

    <string name="output_data">Without data</string>
    <string name="Longitude">Longitude : </string>
    <string name="Latitude">Latitude : </string>
    <string name="Altitude">Altitude : </string>
    <string name="Accuracy">Accuracy (m) : </string>
    <string name="Time">Time (s) : </string>

    <string name="toggle_turn_on">Saving Data ...</string>
    <string name="toggle_turn_off">Start saving data </string>

    <string name="texto_output_filename">Output Filename: </string>
    <string name="filename">salida.dat</string>
    <string name="complete_filename">.</string>

    <string name="action_settings">Settings</string>
</resources>
