<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GpsDataSaveMain">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_output_filename"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:text="@string/filename"
                android:id="@+id/TextOutputFileName"
                android:inputType="text" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_filename"
            android:id="@+id/textCompleteFilename" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar" />

        <ToggleButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_turn_on"
            android:textOff="@string/toggle_turn_off"
            android:text="@string/init_gps_save"
            android:id="@+id/toggleInitProgram" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/output_data"
            android:id="@+id/textDataOutput"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <EditText
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:id="@+id/TextSetLabel"
                android:inputType="text" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/toggle_label_turn_on"
                android:textOff="@string/toggle_label_turn_off"
                android:text="@string/set_label"
                android:id="@+id/toggleSetLabel" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
